--- a/GameData/LazTek/ExplorationExpansion/readme.htm
+++ b/GameData/LazTek/ExplorationExpansion/readme.htm
@@ -44,14 +44,14 @@ title="LazarusLuan"><code>LazarusLuan</code></a></h2>
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/61673-*/"
 title="LazarusLuan">LazarusLuan</a></h3>
 <blockquote>
-<p>The LaxTek Exploration Expansion Kit is designed as an add-on for our
+<p>The LazTek Exploration Expansion Kit is designed as an add-on for our
 LazTek Launch Pack, and the included .craft files require the
 installation of the Launch Pack to load correctly.</p>
 <p>Available for download in low, medium and high resolution versions,
-these mods include replicas of the new SpaceX Dragon V2 capsule and
-trunk, SpaceX Falcon 9 v1.1 and Falcon Heavy launch platforms, proposed
+these mods include replicas of the new LazTek Dragon V2 capsule and
+trunk, LazTek Falcon 9 v1.1 and Falcon Heavy launch platforms, proposed
 Exploration Expansion, plus special configurations for exploration,
-asteroid redirection, refueling, colonization and more! Add the SpaceX
+asteroid redirection, refueling, colonization and more! Add the LazTek
 Exploration Expansion for access to the original DragonRider concept
 spacecraft.</p>
 </blockquote>
@@ -156,7 +156,7 @@ Notes</a></p></li>
 <h3 id="see-more">See more</h3>
 <blockquote>
 <ul>
-<li><a href="https://en.wikipedia.org/wiki/SpaceX_Dragon_2">Dragon 2
+<li><a href="https://en.wikipedia.org/wiki/LazTek_Dragon_2">Dragon 2
 wiki</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Falcon_9">Falcon 9
 wiki</a></li>
@@ -424,7 +424,7 @@ title="zer0Kerbal"><code>zer0Kerbal</code></a></h3>
 <p><em><strong>Completely voluntary, absolutely amazing, and really does
 help me out a lot!</strong></em><br />
 quote from
-<a href="https://forum.kerbalspaceprogram.com/index.php?/profile/32393-*/"><img border="0" alt="cybutek" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2020_06/kappa-kerbal-anarchy.thumb.png.673a2f6f7b36cc60a35c24efef217246.png" width="25px" height="25px">
+<a href="https://forum.kerbalspaceprogram.com/index.php?/profile/32393-*/"><img alt="cybutek" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2020_06/kappa-kerbal-anarchy.thumb.png.673a2f6f7b36cc60a35c24efef217246.png" width="25px" height="25px">
 cybutek</a> creator of
 <a href="https://forum.kerbalspaceprogram.com/index.php?/topic/17833-130-*/" alt="Kerbal Engineer Redux (KER)">
 Kerbal Engineer</a></p>
