--- a/GameData/LazTek/ExplorationExpansion/0.9.99.0.htm
+++ b/GameData/LazTek/ExplorationExpansion/0.9.99.0.htm
@@ -3,7 +3,7 @@
 <p><a
 href="https://www.curseforge.com/kerbal/ksp-mods/ExplorationExpansion"
 title="CurseForge"><img
-src="https://img.shields.io/badge/Historic%20Archive%20(LHA)%20-v0.9.99.0--adoption-BADA55.svg?style=plastic&amp;labelColor=darkgreen/"
+src="https://img.shields.io/badge/Exploration%20Expansion%20(LEE)%20-v0.9.99.0--adoption-BADA55.svg?style=plastic&amp;labelColor=darkgreen/"
 title="0.9.99.0-adoption" alt="Exploration Expansion (LEE)" /></a><br />
 <a href="http://kerbalspaceprogram.com/"
 title="Kerbal Space Program"><img
